deployments/arr/huntarr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntarr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 9705
      targetPort: huntarr
  selector:
    app: huntarr
    part-of: huntarr
